metadata/force-app/main/default/objects/CustomName_yMxcf__c/CustomName_yMxcf__c.object-meta.xml
<CustomObject>
    <description>Description_IUyCu</description>
    <label>CustomLabel_dmKHi</label>
    <nameField>
        <label>CustomLabel_dmKHi</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_dmKHis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>