metadata/force-app/main/default/objects/CustomName_yMxcf__c/fields/CustomField_DCqXc__c.field-meta.xml
<CustomField>
    <fullName>CustomField_DCqXc__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldIgTjA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>