metadata/force-app/main/default/objects/CustomName_yMxcf__c/fields/CustomField_Efcgh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Efcgh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgRosh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>