metadata/force-app/main/default/objects/CustomName_yMxcf__c/fields/CustomField_EoUZh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_EoUZh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldRbXbQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>